--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -43,8 +43,8 @@
         android:id="@+id/articleFragment"
         android:name="com.yuvraj.newsapplication.ui.fragments.ArticleFragment"
         android:label="ArticleFragment" >
-<!--        <argument-->
-<!--            android:name="article"-->
-<!--            app:argType="com.yuvraj.newsapplication.models.Article" />-->
+        <argument
+            android:name="article"
+            app:argType="com.yuvraj.newsapplication.models.Article" />
     </fragment>
 </navigation>
